2016-08-11  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/aggcat.spad, src/algebra/newpoly.spad,
	src/algebra/poly.spad, src/algebra/reclos.spad:
	Cleanup

2016-08-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/efstruc.spad, src/algebra/elemntry.spad:
	Normalize 'lambertW'

2016-08-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intef.spad, src/algebra/intpar.spad,
	src/algebra/jet.spad: Misc cleanups

2016-08-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/ffact.spad: Fix out of bounds index

2016-08-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
	    Qian Yun  <oldk1331@gmail.com>

	* src/algebra/newpoly.spad, src/algebra/prs.spad: Cleanup

2016-08-08  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/aggcat.spad: Change signature of 'split!'

2016-08-06  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/bezout.spad: Add subSylvesterMatrix,
	subResultant, subResultantList

2016-08-03  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/aggcat.spad, src/algebra/string.spad:
	Move *trim from StringAggregate to LinearAggregate

2016-08-01  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/sturm.spad: Cleanups and improvements

2016-07-30  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/newpoly.spad, src/algebra/polycat.spad:
	More efficient 'pseudoQuotient' in UPOLYC

2016-07-29  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/newpoly.spad, src/algebra/poly.spad,
	 src/algebra/polycat.spad, src/algebra/prs.spad:
	Simplify 'pseudoRemainder' and 'pseudoDivide'

2016-07-26  Qian Yun  <oldk1331@gmail.com>

	* src/interp/i-output.boot: Replace recursion by loop

2016-07-19  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/newpoly.spad, src/algebra/poly.spad,
	src/algebra/polycat.spad:  Avoid duplication of 'fmecg'
	and 'pomopo!'

2016-07-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/float.spad, src/algebra/mesh.spad,
	src/algebra/out.spad, src/algebra/outform.spad:
	Remove some Lisp calls
