@@ -1,3 +1,8 @@
+2016-08-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+	    Bill Page <bill.page@newsynthesis.org>
+
+	* src/lisp/fricas-lisp.lisp: Fix build with new ECL
+
 2016-08-11  Qian Yun  <oldk1331@gmail.com>
 
 	* src/algebra/aggcat.spad, src/algebra/newpoly.spad,
